# template-securite-python

./: bruteforce_flag.py  bruteforce_tp3.sh  cookies.txt  pyproject.toml  tp1.py  tp2.py  tp3.py  tp4.py
src/tp1/utils/: capture.py  lib.py  report.py
src/tp3/utils/: captcha.py  session.py
